--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <p>PS5</p>
                     </div>
                 </li>
-                <li><a href="http://">Contact Us</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
         <div class="home">
@@ -361,7 +361,7 @@
                 <div class="our-team-card-parent">
                     <div class="our-team-card">
                         <div class="our-team-img">
-                            <img src="/images/image1.jpeg" alt="">
+                            <img src="/images/man1.jpeg" alt="">
                             <div class="our-team-icon">
                                 <i class="fab fa-facebook-square"></i>
                                 <i class="fab fa-linkedin"></i>
@@ -375,7 +375,7 @@
                     </div>
                     <div class="our-team-card our-team-card2">
                         <div class="our-team-img">
-                            <img src="/images/image2.jpeg" alt="">
+                            <img src="/images/man2.jpeg" alt="">
                             <div class="our-team-icon">
                                 <i class="fab fa-facebook-square"></i>
                                 <i class="fab fa-linkedin"></i>
@@ -389,7 +389,7 @@
                     </div>
                     <div class="our-team-card">
                         <div class="our-team-img">
-                            <img src="/images/image1.jpeg" alt="">
+                            <img src="/images/man3.jpeg" alt="">
                             <div class="our-team-icon">
                                 <i class="fab fa-facebook-square"></i>
                                 <i class="fab fa-linkedin"></i>
@@ -413,7 +413,7 @@
                 <div class="news-card-parent">
                     <div class="news-card">
                         <div class="news-card-img">
-                            <img src="/images/image2.jpeg" alt="">
+                            <img src="/images/man2.jpeg" alt="">
                         </div>
                         <div class="news-card-icon">
                             <div>
@@ -435,7 +435,7 @@
                     </div>
                     <div class="news-card news-card2">
                         <div class="news-card-img">
-                            <img src="/images/image1.jpeg" alt="">
+                            <img src="/images/man1.jpeg" alt="">
                         </div>
                         <div class="news-card-icon">
                             <div>
@@ -457,7 +457,7 @@
                     </div>
                     <div class="news-card">
                         <div class="news-card-img">
-                            <img src="/images/image2.jpeg" alt="">
+                            <img src="/images/man3.jpeg" alt="">
                         </div>
                         <div class="news-card-icon">
                             <div>
