--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <p class="p-2"><i class="fas fa-check"></i>Dedicated to outstanding customer satisfaction.</p>
                 </div>
                 <div class="choose-image">
-                    <img src="/images/pc.jpeg" alt="">
+                    <img src="./images/pc.jpeg" alt="">
                     <div class="dots">
                         <p class="p-first"></p>
                         <p class="p-middle"></p>
@@ -361,7 +361,7 @@
                 <div class="our-team-card-parent">
                     <div class="our-team-card">
                         <div class="our-team-img">
-                            <img src="/images/man1.jpeg" alt="">
+                            <img src="./images/man1.jpeg" alt="">
                             <div class="our-team-icon">
                                 <i class="fab fa-facebook-square"></i>
                                 <i class="fab fa-linkedin"></i>
@@ -375,7 +375,7 @@
                     </div>
                     <div class="our-team-card our-team-card2">
                         <div class="our-team-img">
-                            <img src="/images/man2.jpeg" alt="">
+                            <img src="./images/man2.jpeg" alt="">
                             <div class="our-team-icon">
                                 <i class="fab fa-facebook-square"></i>
                                 <i class="fab fa-linkedin"></i>
@@ -389,7 +389,7 @@
                     </div>
                     <div class="our-team-card">
                         <div class="our-team-img">
-                            <img src="/images/man3.jpeg" alt="">
+                            <img src="./images/man3.jpeg" alt="">
                             <div class="our-team-icon">
                                 <i class="fab fa-facebook-square"></i>
                                 <i class="fab fa-linkedin"></i>
@@ -413,7 +413,7 @@
                 <div class="news-card-parent">
                     <div class="news-card">
                         <div class="news-card-img">
-                            <img src="/images/man2.jpeg" alt="">
+                            <img src="./images/man2.jpeg" alt="">
                         </div>
                         <div class="news-card-icon">
                             <div>
@@ -435,7 +435,7 @@
                     </div>
                     <div class="news-card news-card2">
                         <div class="news-card-img">
-                            <img src="/images/man1.jpeg" alt="">
+                            <img src="./images/man1.jpeg" alt="">
                         </div>
                         <div class="news-card-icon">
                             <div>
@@ -457,7 +457,7 @@
                     </div>
                     <div class="news-card">
                         <div class="news-card-img">
-                            <img src="/images/man3.jpeg" alt="">
+                            <img src="./images/man3.jpeg" alt="">
                         </div>
                         <div class="news-card-icon">
                             <div>
